Fixed some navbar alignment issues/added category seelct for forum posts

--- a/home/static/home/starter-template.css
+++ b/home/static/home/starter-template.css
@@ -18,9 +18,9 @@ body {
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
-    float: right;
     font-size: 14pt;
     margin-right: 20px;
+    vertical-align: center;
 }
 
 img {
